<resources>
    <string name="app_name">Logical Op</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="staff_memeber">Staff memeber</string>
    <string name="it_student">it student</string>
    <string name="banned_from_store">Banned from store</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="check_discounts_eligibility">Check discounts eligibility</string>
    <string name="results_will_appear_here">Results will appear here</string>
    <string name="staff_member">Staff member</string>
</resources>